Minor fixes to default dist.ini.

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,5 @@
 name    = Plack-App-MQTT
 author = Mark Hindess <soft-cpan@temporalanomaly.com>
-
 license =  Perl_5
 copyright_holder = Mark Hindess
 copyright_year = 2011
@@ -36,4 +35,4 @@ copyright_year = 2011
 [MetaJSON]
 
 [GitHub::Meta]
-  repo = plack-app-mqtt
+  repo = plack-app-mqtt-perl
