Add specific prereq version.

--- a/dist.ini
+++ b/dist.ini
@@ -34,5 +34,8 @@ copyright_year = 2011
 [AutoPrereqs]
 [MetaJSON]
 
+[Prereqs]
+AnyEvent::MQTT = 1.112320
+
 [GitHub::Meta]
   repo = plack-app-mqtt-perl
