--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libplack-app-mqtt-perl
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 5)
+Build-Depends: debhelper (>= 5), libtext-microtemplate-perl
 Build-Depends-Indep: perl (>= 5.6.10-12)
 Maintainer: Mark Hindess <soft-debian@temporalanomaly.com>
 Standards-Version: 3.9.1.0
@@ -9,6 +9,12 @@ Homepage: http://search.cpan.org/dist/Plack-App-MQTT/
 
 Package: libplack-app-mqtt-perl
 Architecture: all
-Depends: ${perl:Depends}, ${misc:Depends}
+Depends: ${perl:Depends}, ${misc:Depends},
+         libanyevent-mqtt-perl (>= 1.112320-1), libsub-name-perl,
+         libplack-perl, libjson-perl, libanyevent-perl
+Suggests: libtext-microtemplate-perl
 Description: Plack::App::MQTT Perl Module
- Blah blah blah
+ This module is a Plack application that provides an AJAX to MQTT
+ bridge.  It can be used on its own or combined with L<Plack::Builder>
+ to provide an AJAX MQTT interface for existing Plack applications
+ (such as L<Catalyst>, L<Dancer>, etc applications).
